--- a/HaiNHPage/Settings/templates/settings/homeSetting.html
+++ b/HaiNHPage/Settings/templates/settings/homeSetting.html
@@ -5,10 +5,12 @@
     <title>Home Setting</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
 </head>
 <body>
 <div class="row">
-    <div class="col-2">
+    <dir class="col-1"></dir>
+    <div class="col-1">
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Commercial</a>
           <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
@@ -16,14 +18,17 @@
           <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
         </div>
     </div>
-    <div class="col-10">
+    <div class="col-7">
         <div class="tab-content" id="myTabContent">
           <div class="tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
               {% if title == 'view' %}
                 {% include "settings/viewCommercial.html" %}
+              {% elif title == 'update' %}
+                {% include "settings/updateCommercial.html" %}
+              {% else %}
+                {% include "settings/addCommercial.html" %}
               {% endif %}
-              {% include "settings/addCommercial.html" %}
           </div>
           <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">b</div>
           <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">c</div>
@@ -36,6 +41,6 @@
 <script src="{% static 'js/jquery.slim.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
-
+<script src="{% static 'js/jquery.min.js' %}"></script>
 </body>
 </html>
