--- a/HaiNHPage/Settings/templates/settings/addCommercial.html
+++ b/HaiNHPage/Settings/templates/settings/addCommercial.html
@@ -18,6 +18,13 @@
       <div class="valid-feedback">Valid.</div>
       <div class="invalid-feedback">Please fill out this field.</div>
   </div>
+  <div class="form-group">
+    <p>Image Commercial</p>
+    <input class="form-control" type="file" id="myFile" name="filename2" accept="image/*" required>
+    <div class="valid-feedback">Valid.</div>
+    <div class="invalid-feedback">Please choose file image to upload</div>
+  </div>
+
   <a href="../" class="btn btn-primary" role="button">Back</a>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
