--- a/HaiNHPage/Settings/templates/settings/addCommercial.html
+++ b/HaiNHPage/Settings/templates/settings/addCommercial.html
@@ -1,4 +1,5 @@
-<form action="addRecordCommercial/" method="post" class="was-validated">
+{% load bootstrap_icons %}
+<form action="addRecordCommercial/" method="post" class="was-validated" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="form-group">
       <label>First Text:</label>
@@ -19,10 +20,20 @@
       <div class="invalid-feedback">Please fill out this field.</div>
   </div>
   <div class="form-group">
-    <p>Image Commercial</p>
-    <input class="form-control" type="file" id="myFile" name="filename2" accept="image/*" required>
-    <div class="valid-feedback">Valid.</div>
-    <div class="invalid-feedback">Please choose file image to upload</div>
+    <div class="container py-5">
+      <div class="row py-4">
+        <div class="col-lg-6 mx-auto">
+          <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
+            <input id="upload" type="file" onchange="readURL(this);" class="form-control border-0" name="file_image" accept="image/*" required>
+              <label id="upload-label" for="upload" class="font-weight-light text-muted">Choose file</label>
+                <div class="input-group-append">
+                  <label for="upload" class="btn btn-light m-0 rounded-pill px-4"> {% bs_icon 'cloud-upload' %}<small class="text-uppercase font-weight-bold text-muted">Choose file</small></label>
+                  </div>
+                </div>
+            <div class="image-area mt-4"><img id="imageResult" src="" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
+            </div>
+        </div>
+    </div>
   </div>
 
   <a href="../" class="btn btn-primary" role="button">Back</a>
