--- a/HaiNHPage/Settings/templates/settings/homeSetting.html
+++ b/HaiNHPage/Settings/templates/settings/homeSetting.html
@@ -6,6 +6,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/upload-image.css' %}">
 </head>
 <body>
 <div class="row">
@@ -42,5 +43,6 @@
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/upload-image.js' %}"></script>
 </body>
 </html>
