--- a/HaiNHPage/Settings/templates/settings/updateCommercial.html
+++ b/HaiNHPage/Settings/templates/settings/updateCommercial.html
@@ -1,4 +1,5 @@
-<form action="updateRecordCommercial/{{ commercial.id }}" method="post" class="was-validated">
+{% load bootstrap_icons %}
+<form action="updateRecordCommercial/{{ commercial.id }}" method="post" class="was-validated" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="form-group">
       <label>ID</label>
@@ -22,6 +23,17 @@
       <div class="valid-feedback">Valid.</div>
       <div class="invalid-feedback">Please fill out this field.</div>
   </div>
+  <div class="form-group">
+     <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
+       <input id="upload" type="file" onchange="readURL(this);" class="form-control border-0" name="file_image" accept="image/*" required>
+         <label id="upload-label" for="upload" class="font-weight-light text-muted">{{ commercials.image_name }}</label>
+         <div class="input-group-append">
+            <label for="upload" class="btn btn-light m-0 rounded-pill px-4"> {% bs_icon 'cloud-upload' %} <small class="text-uppercase font-weight-bold text-muted">Choose file</small></label>
+         </div>
+       </div>
+  </div>
+  <div class="image-area mt-4"><img id="imageResult" src="{{commercial.commercials_image}}" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
   <a href="../" class="btn btn-primary" role="button">Back</a>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
