--- a/HaiNHPage/Settings/templates/settings/updateCommercial.html
+++ b/HaiNHPage/Settings/templates/settings/updateCommercial.html
@@ -26,7 +26,7 @@
   <div class="form-group">
      <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
        <input id="upload" type="file" onchange="readURL(this);" class="form-control border-0" name="file_image" accept="image/*" required>
-         <label id="upload-label" for="upload" class="font-weight-light text-muted">{{ commercials.image_name }}</label>
+         <label id="upload-label" for="upload" class="font-weight-light text-muted">File name: {{ commercial.image_name }}</label>
          <div class="input-group-append">
             <label for="upload" class="btn btn-light m-0 rounded-pill px-4"> {% bs_icon 'cloud-upload' %} <small class="text-uppercase font-weight-bold text-muted">Choose file</small></label>
          </div>
